[package]
name = "main"
version = "0.1.0"
authors = ["jyto7034 <jyto7034@naver.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cw2 = "1.1.1"
cw721 = "0.18.0"
anyhow = "1.0.81"
cw-utils = "0.13.4"
schemars = "0.8.15"
lazy_static = "1.4.0"
cosmwasm-schema = "1.5.0"
cw-storage-plus = "1.1.0"
thiserror = { version = "1.0.49" }
cosmwasm-std = { version = "1.5.0", features = []}
serde = { version = "1.0.189", default-features = false, features = ["derive"] }

[dev-dependencies]
cw-multi-test = "0.18.0"
