[package]
name = "token"
version = "0.1.0"
authors = ["d3vfox"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/optimizer:0.15.0
"""

[dependencies]
cosmwasm-schema = "2.0.1"
cosmwasm-std = "1.1.0"
cosmwasm-storage = "1.0.0"
cw-storage-plus = "0.13.2"
protobuf = "=3.2.0"
cw2 = "0.13.2"
cw20 = "1.1.2"
sei-cosmwasm = "0.4.15"
schemars = "0.8.3"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.58" }
serde_repr = "0.1.8"

[dev-dependencies]
cw-multi-test = "2.0.0"
